# SystemIntegration

./: package-lock.json  package.json
01_Data_Files/: me.csv  me.json  me.xml  me.yaml
02_Misc/: SwipeIframe.html  googlehomepage.html  googleiframe.html
03_Modules/html_no_module/: MyModule.js  index.html
03_Modules/html_with_ESmodules/: MyModule.js  index.html  index.js
03_Modules/node_commonjs_modules/: MyModule.js  index.js
03_Modules/python_modules/: main.py
04_Encoding_Decoding/: decoding.py
04_Encoding_Decoding/Serilazation_Deserilazation/: Deserialize.js  Serialize.py  data.json
05_python_enviroments/: main.py
05_python_enviroments/01_Virtual_Env/: requirements.txt
05_python_enviroments/02_Pipeenv_Environment/: Kommandoer.txt  main.py
05_python_enviroments/03_poetry/: pyproject.toml
06_servers/node/: app.js
06_servers/python/: main.py  pyproject.toml
07_TCP_UDP_bonus/tcp_node/: client.js
07_TCP_UDP_bonus/udp_node/: client.js
08_server_to_server/: package-lock.json
08_server_to_server/node/: app.js  app_Server_A.js  package-lock.json  package.json
08_server_to_server/python/: main_Server_B.py  pyproject.toml
09_Env_Var/node/: index.js  package.json
09_Env_Var/python/: pyproject.toml
10_Date/node/: index.js
10_Date/python/: main.py
11_Short_polling_node/: app.js  package-lock.json  package.json
11_Short_polling_node/public/: index.html
12_Long_polling_node/: app.js  index.html  package-lock.json  package.json
13_Server_sent_events/node_sse/: app.js
13_Server_sent_events/python_sse/: main.py  pyproject.toml
14_Websockets/python-plain/: pyproject.toml
15_Webhooks/github_and_wekhooks/: package-lock.json  server.js
15_Webhooks/node_webhooks/: app.js  (+1 more)
16_CORS/: index.html
17_Multipart-froms/: documentation.txt  index.html
17_Multipart-froms_files_via_http_bidirectional/: documentation.txt
18_images (not working)/: anothergif.html  docu.txt
20._MPEG_DASH/: about.md  app.js
22._Database_Documentation/: README.md  SchemaDocumentationWithMRO.js  mro.config.json
24._Redis/python-basic-example/: main.py  pyproject.toml
27._Web_Scraping_Crawling/05._Scrapy_Wiki_Crawler/: README.md  pyproject.toml
27._Web_Scraping_Crawling/05._Scrapy_Wiki_Crawler/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py  output.json
Mandatory_01/01_data_formats/python/: Server.py  data.yaml  pyproject.toml
(+116 files in other folders)
