[tool.poetry]
name = "03-poetry"
version = "0.1.0"
description = ""
authors = ["MikkelYtting <Mytting1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.12.1" # emoji pakken


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
