[tool.poetry]
name = "05-scrapy-wiki-crawler"
version = "0.1.0"
description = ""
authors = ["MikkelYtting <62931295+MikkelYtting@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "05"}]

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
